[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/redhat/redhat.glb" type="PackedScene" id=1]
[ext_resource path="res://characters/redhat/rh-test-foot.tres" type="Material" id=2]
[ext_resource path="res://characters/redhat/rh-test-main.tres" type="Material" id=3]
[ext_resource path="res://characters/redhat/rh-test-cloak.tres" type="Material" id=4]
[ext_resource path="res://characters/redhat/RedHat.gd" type="Script" id=5]

[node name="RedHat" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
script = ExtResource( 5 )

[node name="RedHat" parent="." index="0"]
material/0 = ExtResource( 3 )

[node name="RedHatCloakDN" parent="." index="1"]
material/0 = ExtResource( 4 )

[node name="RedHatCloakUP" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0797475, 0 )
visible = false
material/0 = ExtResource( 4 )

[node name="RedHatFootR" parent="." index="3"]
material/0 = ExtResource( 2 )

[node name="RedHatFootL" parent="." index="4"]
material/0 = ExtResource( 2 )
